Additions to clear functions and font style
Added clear function for selection of radio button
Added button group
Added clear function for checkbox
Added clear function for compounding option
Changed Monthly Payment text to Bold
Changed Loan Payment text to Bold and increased text size

--- a/ExceptionHandled-GUIChallenge/src/ui/FinancialAnalyzerGUI.form
+++ b/ExceptionHandled-GUIChallenge/src/ui/FinancialAnalyzerGUI.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
-    <Component class="javax.swing.ButtonGroup" name="radioButtons">
+    <Component class="javax.swing.ButtonGroup" name="buttonGroup">
     </Component>
   </NonVisualComponents>
   <Properties>
@@ -41,10 +41,10 @@
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="summaryReportButton" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
                       <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
                       <Component id="loanPaymentRadio" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="59" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="investmentValueRadio" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
@@ -90,7 +90,7 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-              <Component id="monthlyPaymentText" max="32767" attributes="0"/>
+              <Component id="monthlyPaymentText" pref="29" max="32767" attributes="0"/>
               <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -152,7 +152,7 @@
                   <Component id="clearButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="exitButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="31" max="32767" attributes="0"/>
+              <EmptySpace pref="28" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -161,18 +161,21 @@
     <Component class="javax.swing.JRadioButton" name="loanPaymentRadio">
       <Properties>
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-          <ComponentRef name="radioButtons"/>
+          <ComponentRef name="buttonGroup"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Loan Payment "/>
       </Properties>
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="loanPaymentRadio"/>
       </AccessibilityProperties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loanPaymentRadioActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="investmentValueRadio">
       <Properties>
         <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
-          <ComponentRef name="radioButtons"/>
+          <ComponentRef name="buttonGroup"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Investment Value"/>
         <Property name="actionCommand" type="java.lang.String" value="Investment Value "/>
@@ -180,9 +183,15 @@
       <AccessibilityProperties>
         <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="investmentValueRadio"/>
       </AccessibilityProperties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="investmentValueRadioActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="titleCalculator">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="14" style="1"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Loan Payment Calculator"/>
       </Properties>
       <AccessibilityProperties>
@@ -279,6 +288,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="monthlyPayment">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Tahoma" size="11" style="1"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Monthly Payment"/>
       </Properties>
     </Component>
