--- a/ExceptionHandled-GUIChallenge/src/ui/FinancialAnalyzerGUI.form
+++ b/ExceptionHandled-GUIChallenge/src/ui/FinancialAnalyzerGUI.form
@@ -236,9 +236,6 @@
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
       </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="loanAmountTextActionPerformed"/>
-      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="loanAmountText.setEditable(false);"/>
       </AuxValues>
@@ -262,7 +259,7 @@
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="5">
-            <StringItem index="0" value="Annually"/>
+            <StringItem index="0" value="Annual"/>
             <StringItem index="1" value="Semiannual"/>
             <StringItem index="2" value="Quarterly"/>
             <StringItem index="3" value="Monthly"/>
@@ -333,6 +330,9 @@
         <Property name="horizontalAlignment" type="int" value="4"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="monthlyPaymentText.setEditable(false);"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
